fix: fix to officer carousel so it works properly on mobile aswell as allow for a click which would select the card

--- a/eucf-website/src/app/globals.css
+++ b/eucf-website/src/app/globals.css
@@ -33,6 +33,12 @@ body {
   }
 }
 
+@media (hover: hover) {
+  .carousel-track:has(:hover) {
+    animation-play-state: paused;
+  }
+}
+
 .text-outline {
   text-shadow:
     -3px -3px 0 black,
